<resources>
    <string name="app_name">Them tickets ain\'t buyin\' themselves</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_instead">Register Instead?</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="create_account">Create Account</string>
    <string name="hambar">hambar</string>
    <string name="cardview_bg_image">background_image</string>
    <string name="dash">-</string>
    <string name="background_image">background_image</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="view_events">View events</string>
    <string name="choose_an_option">Choose an option:</string>
    <string name="view_orders">View orders</string>
    <string name="select_tickets">Select tickets</string>
    <string name="purchase">Purchase</string>
    <string name="prices">Prices</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="update_order">Update</string>
    <string name="modify_details">Modify details</string>
</resources>