<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_option"
        android:padding="16dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/view_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_events"
        android:padding="16dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/view_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_orders"
        android:padding="16dp"
        android:textSize="16sp" />
</LinearLayout>
