<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/event_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:background="@drawable/rounded_corners"
    app:cardCornerRadius="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:padding="8dp"
            android:textColor="@color/white"

            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toTopOf="@id/background_image"
            app:layout_constraintStart_toStartOf="parent" />
<!--            app:layout_constraintEnd_toEndOf="parent"-->

        <TextView android:id="@+id/event_prices"
            android:text="@string/prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="8dp"
            android:textColor="@color/white"

            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toTopOf="@id/background_image"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView android:id="@+id/available_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="8dp"
            android:textColor="@color/white"

            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView android:id="@+id/standard_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:textColor="@color/white"

            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toBottomOf="@id/event_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/white"

            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toBottomOf="@id/available_tickets"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/white"

            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toBottomOf="@id/available_tickets"
            app:layout_constraintBottom_toBottomOf="@id/start_date"
            app:layout_constraintStart_toEndOf="@id/start_date"
            app:layout_constraintEnd_toStartOf="@id/end_date" />

        <TextView android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/white"

            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toBottomOf="@id/available_tickets"
            app:layout_constraintStart_toEndOf="@id/dash" />

        <TextView android:id="@+id/vip_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            app:layout_constraintTop_toBottomOf="@id/available_tickets"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>